@@ -1,3 +1,5 @@
+2006/6/24 -- released version 20060624_trunk
+
 2006/6/23 -- released version 20060623_trunk
 
 2006/6/22 -- released version 20060622_trunk
